<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_tracking_service"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_tracking_service"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button

            android:id="@+id/btnEnableAlarmTrigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_alarm_trigger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnStop" />

        <Button
            android:id="@+id/btnDisableAllArmTrigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable_alarm_trigger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnStop" />



        <Button

            android:id="@+id/btnEnableFiltering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_point_filtering"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnStop" />

        <Button
            android:id="@+id/btnDisableFiltering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable_point_filtering"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnStop" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>